js/js.translator/testData/incremental/invalidation/mainFunctionSelectSamePackage/main/first.1.kt
package p

private fun main() {
    value.ok += "P1"
}
